# python-fastapi-github-timeline

./: LICENSE  README.rst  app.py  pyproject.toml  tasks.py
templates/: _style.css  _timeline-secondary.html  _timeline.html  index.html  macros.html
