[tool.poetry]
name = "cl-github-timeline"
version = "0.1.0"
description = ""
authors = ["Jan Vlcinsky <jan.vlcinsky@tamtamresearch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
Jinja2 = "^3.0.1"
requests = "^2.26.0"
uvicorn = "^0.14.0"
python-multipart = "^0.0.5"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
